use valueOf instead of constructor
git-svn-id: file:///home/SUBVERSION/jas/trunk@4092 eafcb37d-f50b-0410-b8f7-d4cb9effa109